2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_wizard_save.py:
	* flumotion/wizard/save.py:
	  Make saving of config with a producer-video use consistent naming.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/documentation.py:
	  Forgot to rename an attribute to .section here too.  Fixes #897.

2008-03-20  Michael Smith <msmith@fluendo.com>

	* flumotion/configure/configure.py:
	  Figure out our directory early on, when configure is first imported
	  (before daemonising).
	* flumotion/worker/job.py:
	  Spawn jobs from this directory
	  Fixes #873.

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/connections.py (Connections.__init__): 
	Make the recent hostname column in the connection dialog searchable.
	Fixes #880

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/configurationwizard.py
	(ConfigurationWizard.hasAudio): 
	Use the hasAudio method on the production step to find out
	if we will include audio. We can't just get the model, because
	it's not created yet.

	* flumotion/wizard/productionsteps.py (ProductionStep.hasAudio): 
	New method.

	Fixes #884

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/models.py:
	(Component.__repr__): print the fully qualified name of the class
	instead of always showing 'Component'	 

	* flumotion/wizard/models.py:
	Make the AudioProducer inheirt from Producer, not Component.

	* flumotion/wizard/save.py:
	Allow video and audio producers to be subclasses of Producer.

	* flumotion/test/test_wizard_save.py:
	Create one producer and use it for both audio and video

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard_save.py
	(TestWizardSave): avoid hard coding the version, otherwise we'll
	just break when the version number is bumped.
	
	* flumotion/test/test_wizard_save.py
	(TestWizardSave.testDefaultStream):  Add a firewire test.
